--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            resValue "string", "api_key", api_key
+        }
         release {
+            resValue "string", "api_key", api_key
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -61,4 +65,8 @@ dependencies {
 
     //Picaso
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    implementation("com.google.ai.client.generativeai:generativeai:0.6.0")
+    implementation("com.google.guava:guava:31.0.1-android")
+    implementation("org.reactivestreams:reactive-streams:1.0.4")
 }
