--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=false
 android.nonFinalResIds=false
+api_key=AIzaSyDMG9eLFzcIn5VhsLvmJ4Y7kt_emvixhp8
